--- a/package.json
+++ b/package.json
@@ -9,24 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.6",
     "expo-font": "^11.10.3",
+    "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-location": "^16.5.5",
+    "expo-media-library": "^16.0.3",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.5",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-document-picker": "^9.3.0",
+    "react-native-maps": "1.10.0",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-richtext-editor": "^0.1.14",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-shimmer-placeholder": "^2.0.9",
-    "expo-linear-gradient": "~12.7.2"
+    "react-native-tags-input": "^1.0.10",
+    "react-native-web": "^0.19.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
